[gd_scene load_steps=24 format=3 uid="uid://bm3g0a78ol6i"]

[ext_resource type="Script" path="res://Redguy/Redguy.gd" id="1_67hgr"]
[ext_resource type="PackedScene" uid="uid://dbkfurlf5s8aj" path="res://Scenes/enemy_death_animation.tscn" id="2_0fbvp"]
[ext_resource type="Texture2D" uid="uid://cm2wcrq8vldst" path="res://Assets/Enemies/Redguy/From John/right_leg.png" id="2_d66gv"]
[ext_resource type="Texture2D" uid="uid://cqpw1oamii6bg" path="res://Assets/Enemies/Redguy/From John/jaw.png" id="3_ec20h"]
[ext_resource type="Texture2D" uid="uid://b6cie3ow2kh3g" path="res://Assets/Enemies/Redguy/From John/face.png" id="4_bg0ue"]
[ext_resource type="Texture2D" uid="uid://heyjd6070dku" path="res://Assets/Enemies/Redguy/From John/left_leg.png" id="5_qnjro"]
[ext_resource type="Texture2D" uid="uid://d3but7ifqi15e" path="res://Assets/Enemies/Redguy/From John/left_antenna.png" id="6_0r5cb"]
[ext_resource type="Texture2D" uid="uid://528nlbfffcsk" path="res://Assets/Enemies/Redguy/From John/right_antenna.png" id="7_awjh4"]
[ext_resource type="Texture2D" uid="uid://dei5lo3a1lkbj" path="res://Assets/Enemies/Redguy/From John/left_eyelid.png" id="8_rq6e5"]
[ext_resource type="Texture2D" uid="uid://c12t4arfo34k0" path="res://Assets/Enemies/Redguy/From John/right_eyelid.png" id="9_8vem2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wo5yj"]
size = Vector2(31.5, 38.0625)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uvm1s"]
size = Vector2(20, 32.377)

[sub_resource type="SpriteFrames" id="SpriteFrames_t6vxu"]

[sub_resource type="SpriteFrames" id="SpriteFrames_3h5df"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_d66gv")
}],
"loop": true,
"name": &"Right_Leg",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_yg455"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_ec20h")
}],
"loop": true,
"name": &"Jaw",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_gb57e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_bg0ue")
}],
"loop": true,
"name": &"Face",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_q2sof"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_rq6e5")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_u6b5l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_8vem2")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_67c5q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_qnjro")
}],
"loop": true,
"name": &"Left_Leg",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_m0ht3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_0r5cb")
}],
"loop": true,
"name": &"Left_Antenna",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_qfuyq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_awjh4")
}],
"loop": true,
"name": &"Right_Antenna",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_gbqq4"]
resource_name = "Walking"
length = 1.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodySprite/Right_Leg:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-2, -4), Vector2(-3, -3), Vector2(-4, -1), Vector2(-3, 0), Vector2(-1, 0), Vector2(0, 0), Vector2(1, 0), Vector2(2, 0), Vector2(3, 0), Vector2(4, 0), Vector2(3, -1), Vector2(2, -2), Vector2(1, -3), Vector2(-1, -4), Vector2(-2, -4), Vector2(-2, -4), Vector2(-2, -4), Vector2(-2, -4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodySprite/Face:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(0, -1), Vector2(0, -1), Vector2(0, -2), Vector2(0, -2), Vector2(0, -3), Vector2(0, -3), Vector2(0, -4), Vector2(0, -4), Vector2(0, -3), Vector2(0, -3), Vector2(0, -2), Vector2(0, -2), Vector2(0, -1), Vector2(0, -1), Vector2(0, 0), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BodySprite/Left_Leg:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 0), Vector2(2, 0), Vector2(2, -1), Vector2(1, -2), Vector2(0, -3), Vector2(-1, -3), Vector2(-2, -2), Vector2(-3, -1), Vector2(-3, 0), Vector2(-2, 0), Vector2(-1, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BodySprite/Left_Antenna:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(0, -1), Vector2(0, -1), Vector2(0, -2), Vector2(0, -2), Vector2(0, -2), Vector2(0, -2), Vector2(0, -2), Vector2(0, -4), Vector2(0, -3), Vector2(0, -3), Vector2(0, -3), Vector2(0, -3), Vector2(0, -1), Vector2(0, -1), Vector2(0, -1), Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BodySprite/Right_Antenna:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, -3), Vector2(0, -3), Vector2(0, -4), Vector2(0, -4), Vector2(0, -4), Vector2(0, -3), Vector2(0, -2), Vector2(0, -2), Vector2(0, -1), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0fmng"]
_data = {
"Walking": SubResource("Animation_gbqq4")
}

[node name="Redguy" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_67hgr")
enemy_death_effect = ExtResource("2_0fbvp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_wo5yj")

[node name="Area2D" type="Area2D" parent="."]
rotation = 3.14159
scale = Vector2(0.0400002, -15.64)
collision_layer = 4
collision_mask = 19

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -0.575448)
scale = Vector2(22.32, 0.31202)
shape = SubResource("RectangleShape2D_uvm1s")

[node name="BodySprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_t6vxu")

[node name="Right_Leg" type="AnimatedSprite2D" parent="BodySprite"]
position = Vector2(-2, -4)
sprite_frames = SubResource("SpriteFrames_3h5df")
animation = &"Right_Leg"

[node name="Jaw" type="AnimatedSprite2D" parent="BodySprite"]
sprite_frames = SubResource("SpriteFrames_yg455")
animation = &"Jaw"

[node name="Face" type="AnimatedSprite2D" parent="BodySprite"]
sprite_frames = SubResource("SpriteFrames_gb57e")
animation = &"Face"

[node name="Left_Eyelid" type="AnimatedSprite2D" parent="BodySprite/Face"]
sprite_frames = SubResource("SpriteFrames_q2sof")

[node name="Right_Eyelid" type="AnimatedSprite2D" parent="BodySprite/Face"]
sprite_frames = SubResource("SpriteFrames_u6b5l")

[node name="Left_Leg" type="AnimatedSprite2D" parent="BodySprite"]
sprite_frames = SubResource("SpriteFrames_67c5q")
animation = &"Left_Leg"

[node name="Left_Antenna" type="AnimatedSprite2D" parent="BodySprite"]
sprite_frames = SubResource("SpriteFrames_m0ht3")
animation = &"Left_Antenna"

[node name="Right_Antenna" type="AnimatedSprite2D" parent="BodySprite"]
sprite_frames = SubResource("SpriteFrames_qfuyq")
animation = &"Right_Antenna"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Walking"
speed_scale = 5.0
libraries = {
"": SubResource("AnimationLibrary_0fmng")
}

[node name="EdgeCheck" type="RayCast2D" parent="."]
position = Vector2(13, 20)
target_position = Vector2(0, 10)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
